Map overflow scroll fix

--- a/src/assets/scss/_dashboard.scss
+++ b/src/assets/scss/_dashboard.scss
@@ -33,7 +33,7 @@
         margin: 0 auto;
         height: 100%;
         overflow: auto;
-        position: absolute;
+        position: fixed;
         height: 100%;
             
     }
